data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_715.wast
;; 6. **Test: Multiple `br_if` with Different Data Types**    - **Description:** Create a series of `br_if` instructions with conditions based on different data types (integers, floats, etc.). Each condition should accurately reflect the data type's logical value.    - **Constraint:** Verify that each `br_if` correctly evaluates its condition based on the data type, ensuring consistency in condition evaluation across types.

(assert_invalid
  (module (func (result i32)
    (block (result i32) 
      (br_if 0 (f32.const 0.0) (i32.const 1)) (i32.const 1)
    )
  ))
  "type mismatch"
)